--- a/sass/blocks/_contacts.scss
+++ b/sass/blocks/_contacts.scss
@@ -2,7 +2,7 @@
 {
     padding: 60px 0 195px;
     min-height: 700px;
-    background: url('../../img/contacts-bg.jpg') center center/cover no-repeat;
+    background: url('../img/contacts-bg.jpg') center center/cover no-repeat;
     .flex-container
     {
         width: 100%;
