--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -35,21 +35,27 @@
         {
             .menu
             {
-                display: none;
+                // display: none;
                 padding: 134px 343px 0 127px;
                 gap: 16px;
                 align-items: start;
                 justify-content: start;
                 position: fixed;
                 top: 0;
-                right: 0;
+                right: -100%;
                 flex-direction: column;
                 width: 80%;
                 height: 100vh;
                 background-color: #000;
+                transition: right 0.5s ease;
+                z-index: 2;
                 &__link
                 {
                     @include text($fw: 400, $fz: 35px, $lh: 73px, $color: #fff);
+                }
+                &-active
+                {
+                    right: 0;
                 }
             }
             .hamburger
@@ -59,10 +65,16 @@
             }
             .close
             {
+                display: block;
                 position: fixed;
                 top: 20px;
-                right: 64px;
-                display: none;
+                right: -100%;
+                transition: right 0.5s ease;
+                z-index: 2;
+                &-active
+                {
+                    right: 64px;
+                }
             }
         }
     }
