--- a/sass/blocks/_video.scss
+++ b/sass/blocks/_video.scss
@@ -14,7 +14,7 @@
         position: relative;
         margin-top: 60px;
         width: 100%;
-        // height: 100vh;
+        height: 95%;
     }
     &-container
     {
